--- a/user-auth-app/src/App.css
+++ b/user-auth-app/src/App.css
@@ -2,5 +2,31 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 10px; /* Optional: Adds some space between images */
-  justify-items: center; /* Centers images within their grid cells */
+  justify-items: center; 
+}
+
+
+.login_bg {
+  position: relative;
+  background-image: url("./assets/Tanishq1.jpeg");
+  background-size: cover;
+  background-position: center;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.login-form {
+  background: rgba(202, 141, 141, 0.8);
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+
+.top-header-area {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: rgb(178, 180, 36);
 }
