--- a/user-auth-app/src/App.css
+++ b/user-auth-app/src/App.css
@@ -41,7 +41,7 @@
 
 .login_bg {
   position: relative;
-  background-image: url("./assets/Tanishq1.jpeg");
+  background-image: url("./assets/Mix.jpeg");
   background-size: cover;
   background-position: center;
   min-height: 100vh;
